--- a/app/src/main/res/layout/daily_reminders_list_item.xml
+++ b/app/src/main/res/layout/daily_reminders_list_item.xml
@@ -20,7 +20,7 @@
             android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/medicine" />
+            app:srcCompat="@drawable/image_medicine" />
 
         <TextView
             android:id="@+id/tv_medicine_name_daily_reminder"
@@ -67,16 +67,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/img_medicine_daily_reminder">
-
-            <com.google.android.material.chip.Chip
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="After Breakfast" />
-
-            <com.google.android.material.chip.Chip
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="After Dinner" />
         </com.google.android.material.chip.ChipGroup>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
