--- a/app/src/main/res/layout/fragment_doctor_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_doctor_edit_profile.xml
@@ -214,6 +214,7 @@
                     android:id="@+id/et_about_doctor"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:gravity="top"
                     android:fontFamily="@font/poppins_regular"
                     android:hint="About Me"
                     android:text="@={viewModel.aboutDoctor}"
