--- a/app/src/main/res/layout/upcoming_appointments_patient_home_list_item.xml
+++ b/app/src/main/res/layout/upcoming_appointments_patient_home_list_item.xml
@@ -17,6 +17,7 @@
             android:id="@+id/tv_doctor_name_upcoming_appointments_home"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/poppins_bold"
             android:text="Dr. Ahmed Mostafa"
