--- a/app/src/main/res/layout/completed_appointments_list_item.xml
+++ b/app/src/main/res/layout/completed_appointments_list_item.xml
@@ -44,6 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
             android:background="@drawable/custom_outline_rectangle_button"
             android:backgroundTint="@color/green"
             android:fontFamily="@font/poppins_regular"
@@ -51,6 +52,7 @@
             android:text="Completed"
             android:textColor="@color/green"
             android:textSize="16sp"
+            app:layout_constraintBottom_toTopOf="@+id/view_line_completed_appointments"
             app:layout_constraintEnd_toEndOf="@+id/tv_doctor_name_completed_appointments"
             app:layout_constraintTop_toBottomOf="@+id/tv_doctor_name_completed_appointments" />
 
@@ -119,7 +121,7 @@
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_book_again_completed_appointments"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="44dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="8dp"
@@ -135,9 +137,9 @@
             app:layout_constraintTop_toBottomOf="@+id/img_calender_completed_appointments_icon" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_reschedule"
+            android:id="@+id/btn_leave_a_review"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="44dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
