--- a/app/src/main/res/layout/upcoming_appointments_list_item.xml
+++ b/app/src/main/res/layout/upcoming_appointments_list_item.xml
@@ -44,6 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
             android:background="@drawable/custom_outline_rectangle_button"
             android:backgroundTint="@color/main_color"
             android:fontFamily="@font/poppins_regular"
@@ -51,6 +52,7 @@
             android:text="upcoming"
             android:textColor="@color/main_color"
             android:textSize="16sp"
+            app:layout_constraintBottom_toTopOf="@+id/view_line_upcoming_appointments"
             app:layout_constraintEnd_toEndOf="@+id/tv_doctor_name_upcoming_appointments"
             app:layout_constraintTop_toBottomOf="@+id/tv_doctor_name_upcoming_appointments" />
 
@@ -117,9 +119,9 @@
             app:layout_constraintGuide_percent="0.5" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_book_again_upcoming_appointments"
+            android:id="@+id/btn_cancel_upcoming_appointments"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="44dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="8dp"
@@ -137,7 +139,7 @@
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_reschedule"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="44dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
@@ -149,7 +151,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/guideline3"
-            app:layout_constraintTop_toTopOf="@+id/btn_book_again_upcoming_appointments" />
+            app:layout_constraintTop_toTopOf="@+id/btn_cancel_upcoming_appointments" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
