--- a/app/src/main/res/layout/dialog_cancel_upcoming_appointment.xml
+++ b/app/src/main/res/layout/dialog_cancel_upcoming_appointment.xml
@@ -2,109 +2,102 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/cv_sign_out_dialog"
+    android:id="@+id/cv_cancel_upcoming_appointment_dialog"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="25dp"
-    app:cardUseCompatPadding="true"
     app:cardPreventCornerOverlap="false"
-    >
+    app:cardUseCompatPadding="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="6dp">
+        android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/tv_sign_out_title"
+            android:id="@+id/tv_cancel_upcoming_appointment_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             android:fontFamily="@font/poppins_bold"
-            android:text="Sign out"
+            android:text="Cancel Upcoming Appointment ?"
             android:textColor="@color/black"
-            android:textSize="24sp"
+            android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/iv_sign_out_icon"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="8dp"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_sign_out_title"
-            app:layout_constraintStart_toEndOf="@+id/tv_sign_out_title"
-            app:layout_constraintTop_toTopOf="@+id/tv_sign_out_title"
-            app:srcCompat="@drawable/logout_icon"
-            app:tint="#E91E63" />
+            android:id="@+id/iv_cancel_upcoming_appointment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="-8dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_cancel_upcoming_appointment_title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/tv_cancel_upcoming_appointment_title"
+            app:srcCompat="@drawable/cancel_appointment" />
 
         <View
-            android:id="@+id/view_sign_out_dialog"
+            android:id="@+id/view_cancel_upcoming_appointment_title"
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            android:background="@color/gray"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
+            android:background="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/iv_sign_out_icon" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_cancel_upcoming_appointment_title" />
 
         <TextView
-            android:id="@+id/tv_sign_out_dialog_body"
+            android:id="@+id/tv_cancel_upcoming_appointment_body"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:fontFamily="@font/poppins_medium"
-            android:text="Are you sure you want to logout ?"
+            android:text="You will permanently cancel this upcoming appointment"
             android:textColor="@color/black"
-            android:textSize="20sp"
+            android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/view_sign_out_dialog" />
+            app:layout_constraintTop_toBottomOf="@+id/view_cancel_upcoming_appointment_title" />
 
         <Button
-            android:id="@+id/btn_cancel_sign_out_dialog"
+            android:id="@+id/btn_close_cancel_appointment_dialog"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_height="44dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="4dp"
             android:layout_marginBottom="32dp"
             android:background="@drawable/custom_outlined_button"
-            android:text="@android:string/cancel"
+            android:text="Close"
             android:textColor="@color/black"
-            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/guideline_sign_out_dialog"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_sign_out_dialog_body" />
+            app:layout_constraintEnd_toStartOf="@+id/guideline6"
+            app:layout_constraintStart_toStartOf="@+id/tv_cancel_upcoming_appointment_body"
+            app:layout_constraintTop_toBottomOf="@+id/tv_cancel_upcoming_appointment_body" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_sign_out_dialog"
+            android:id="@+id/guideline6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            app:layout_constraintGuide_begin="199dp"
             app:layout_constraintGuide_percent="0.5" />
 
         <Button
-            android:id="@+id/btn_sign_out_dialog"
+            android:id="@+id/btn_confirm_cancelling_appointment"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_height="44dp"
+            android:layout_marginStart="4dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="24dp"
-            android:background="@drawable/custom_filled_rounded_button"
-            android:text="Log Out"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:background="@drawable/custom_filled_red_rounded_button"
+            android:text="Yes, Cancel"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/guideline_sign_out_dialog"
-            app:layout_constraintTop_toBottomOf="@+id/tv_sign_out_dialog_body" />
+            app:layout_constraintStart_toStartOf="@+id/guideline6"
+            app:layout_constraintTop_toBottomOf="@+id/tv_cancel_upcoming_appointment_body" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </androidx.cardview.widget.CardView>
