--- a/app/src/main/res/layout/fragment_patient_profile.xml
+++ b/app/src/main/res/layout/fragment_patient_profile.xml
@@ -50,7 +50,7 @@
                 android:layout_width="140dp"
                 android:layout_height="140dp"
                 android:layout_marginTop="32dp"
-                app:ImgGender="@{viewModel.patient.gender}"
+                app:ImgGenderPatient="@{viewModel.patient.gender}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
