--- a/app/src/main/res/layout/upcoming_appointments_patient_home_list_item.xml
+++ b/app/src/main/res/layout/upcoming_appointments_patient_home_list_item.xml
@@ -44,6 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             android:fontFamily="@font/poppins_medium"
             android:text="10:00 am"
             android:textColor="@color/black"
@@ -78,7 +79,8 @@
             android:id="@+id/img_time_upcoming_appointments_home"
             android:layout_width="24dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_date_upcoming_appointments_home"
             app:layout_constraintStart_toEndOf="@+id/tv_date_upcoming_appointments_home"
             app:layout_constraintTop_toTopOf="@+id/tv_date_upcoming_appointments_home"
             app:srcCompat="@drawable/available_time_icon" />
